# MeasurementMCTS

./: .gitignore  .gitmodules  Dockerfile  car.py  docker-compose.yaml  ekf.py  evaluation.py  exploration_grid.py  flask_server.py  lqr.py  main.py  object_manager.py  ooi.py  output_debug.txt  plotter_ui.py  pytorch_profiler.py  requirements.txt  run_mcts.ipynb  small_tree.html  static_kf.py  static_kf_2d.py  tree_visualization.html  ui.py  utils.py  vectorization_test.py  vectorized_kalman_filter.py  vkf.py
docker/: .bash_aliases
img/: tree.gv
mcts/: hash.py  mcts.py  nodes.py  tree_viz.py  unvectorized_mcts.py
mcts/old/: nodes.py
mcts_code_references/tianqi/: mcts.py
mcts_reference/alpha_go_zero/: alphago_vectorized_mcts.py
mcts_reference/tianqi/: nbo_planner.py  planner.py
object_configurations/: occlusion_failure1.pkl
profiling/: 1000learningiterations.prof  aug5.prof  evaluation_comparison.prof  even_more_speedup_post_occlusion_explore_grid.prof  filename  gpu_100_learning.prof  may9_post_eval_and_obs_speedup.prof  may9_pre_observation_speedup.prof  more_speedup_post_occlusion_explore_grid.prof  numpy_output.prof  post_occlusion_explore_grid.prof  profiler.ipynb  speedup_post_occlusion_explore_grid.prof
profiling_output/: test1.prof
references/alpha_go_zero/: pytorch_mcts_v2.py
references/open_source/: MCTS.py
references/tianqi/: hash.py  nodes.py  spw.py
src/corner_detection/: 3d_ransac_testing.ipynb  package.xml  pca_testing.ipynb  ransac_testing.ipynb  setup.cfg  setup.py
src/jeep_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/pointcloud_to_polygons/: CMakeLists.txt  package.xml
src/pointcloud_to_polygons/src/: pointcloud_clustering_node.cpp  pointcloud_segmentation_node.cpp  pointcloud_to_corners_ransac_node.cpp  pointcloud_to_gridmap_node.cpp  pointcloud_to_object_points_node.cpp
state_evaluation/: evaluation.py  policy_value_net.py  reinforcement_learning.py  train_rl.ipynb
test/: blackjack_tutorial.ipynb  car_kinematics.ipynb  evaluation_test.ipynb  exploration_grid.ipynb  fast_collision.ipynb  fast_simulated_observation.ipynb  gym_env_test.ipynb  gym_env_test.py  kd_tree_evaluation.ipynb  least_rectangular_point.ipynb  mcts_optimizer.ipynb  mcts_test.ipynb  measurement_model.ipynb  multi_processing.py  object_manager.ipynb  observation_data_association.ipynb  pytorch_dqn_tutorial.ipynb  pytorch_test.ipynb  reinforcement_learning.ipynb  shapely_collision.ipynb  state_as_image.ipynb  tree_gen.py
(+47 files in other folders)
